fix visibility

--- a/agent/static/css/app.css
+++ b/agent/static/css/app.css
@@ -31,7 +31,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	flex: 6;
-	width: 100%;
+	width: 50%;
 }
 /*===================================*/
 
